<resources>
    <string name="app_name">CampusTravel</string>
    <string name="app_name_zhCN">校园微导</string>

    <!--login and register-->
    <string name="user_name">用户名</string>
    <string name="head">头像</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="phone_num">手机号</string>
    <string name="email">邮箱</string>
    <string name="account_phone_num">账号/邮箱</string>
    <string name="verify_code">验证码</string>
    <string name="finish">完成</string>
    <string name="account_must">账号/邮箱（必填）</string>
    <string name="phone_num_must">验证码（必填）</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birthday">出生日期</string>
    <string name="birthday_example">1997/02/05</string>
    <string name="confirm_password">确认密码</string>
    <string name="obey_protocol">我已同意并愿意遵守相应的</string>
    <string name="articles_of_agreement">协议条款</string>
    <string name="my_profile">个人信息</string>
    <string name="rememberpassword">记住密码</string>
    <string name="getcertifycode">获取验证码</string>

    <!--first home page-->
    <string name="campus_tiny_guide">校园微导</string>
    <string name="search_hint">输入你想去的景区/景点</string>
    <string name="scenic_map">景区地图</string>
    <string name="map">Map</string>
    <string name="travel_route">旅游路线</string>
    <string name="route">Route</string>
    <string name="voice_interactive">语音交互</string>
    <string name="voice">Voice</string>
    <string name="scenic_introduction">景区介绍</string>
    <string name="information">Information</string>
    <string name="scenic_nearby_list">附近景点列表 ></string>
    <string name="click_to_search">点击搜索</string>
    <string name="daily_message">每日推送</string>
    <string name="see_thermal_map">查看当前景区热力图</string>
    <string name="see_flat_map">查看当前景区平面图</string>
    <string name="cancel">取消</string>
    <string name="voice_introduction">语音讲解</string>
    <string name="voice_assistance">语音助手</string>

    <!--second home page-->
    <string name="daily_poi_recommend">每日推送</string>
    <string name="today_is">今天是： </string>
    <string name="your_current_pos">您目前所处的位置为：</string>
    <string name="open_time_table">开放时间 </string>
    <string name="score_with_plus">k+  评分</string>

    <!--third home page-->
    <string name="me_center">个人中心</string>
    <string name="setting">设置</string>
    <string name="coupon">优惠券</string>
    <string name="browse_history">浏览历史</string>
    <string name="account_with_colon">账号:</string>

    <!--search activity-->
    <string name="search_scenic_spot">景点搜索</string>
    <string name="search_scenic_area">景区搜素</string>
    <string name="search">搜索</string>

    <!--thermal flat map-->
    <string name="back_to_my_pos">回到当前位置</string>
    <string name="scenic_thermal_map">景区热力图</string>
    <string name="scenic_flat_map">景区平面图</string>

    <!--route recommend-->
    <string name="travel_route_recommend">游览路线推荐</string>
    <string name="start_recommend">开始推荐</string>
    <string name="click_and_pick_scenic_spot">点击选择途径点</string>
    <string name="your_current_scenic_spot">您所处的景区为：</string>
    <string name="please_pick_scenic_spot">请勾选你想去的所有景点</string>
    <string name="ok">确定</string>

    <!--scenic intro-->
    <string name="scenic_area_detail_intro">景区详情介绍</string>
    <string name="total_num_comments">共%d条评论</string>
    <string name="score_total">综合评分</string>
    <string name="see_scenic_map">查看景区地图</string>
    <string name="scenic_spot_list_in_area">景区景点列表 ></string>
    <string name="available_spot_num">%d个可游览景点</string>
    <string name="zzu_intro">
        郑州大学医科教育源于1928年的国立第五中山大学，1952年河南医学院独立建院，开启了河南医学高等教育的先河，
        1984年，定名为河南医科大学；原郑州大学创建于1956年，是新中国创办的第一所综合性大学，1961年，郑州师范学院并入，
        1991年，黄河大学并入，1992年，河南体育专科学校并入；郑州工业大学成立于1963年，是原化工部直属的重点院校，1973年，
        河南农业大学粮油工业系并入;2000年7月，原郑州大学、郑州工业大学和河南医科大学三校合并组建新郑州大学。
    </string>
    <string name="scenic_spot_detail_intro">景点详情介绍</string>

    <!--setting page-->
    <string name="title">设置</string>
    <string name="modify_profile">修改个人信息</string>
    <string name="modify_password">修改密码</string>
    <string name="message_notify">消息通知</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="about">关于校园微导</string>
    <string name="exit_login_button">退出登录</string>

    <!--voice interact-->
    <string name="voice_introducing_now">正在进行语音讲解</string>
    <string name="voice_introduce_hint">请打开定位，调节音量至合适大小，并保持网络通畅</string>
    <string name="stop_introducing">停止讲解</string>
    <string name="start_introducing">开始讲解</string>
    <string name="voice_introducing_paused">已暂停语音讲解</string>

    <!--voice assistant-->
    <string name="anything_i_can_do">有什么我能为您效劳的</string>
    <string name="voice_assist_hint">请说出具体地点名称</string>
    <string name="click_and_speak">点击说话</string>
    <string name="click_to_stop">点击停止</string>

    <!--coupon list-->
    <string name="my_coupon">我的优惠券</string>
    <string name="please_input_coupon_code">请输入券码</string>

    <!--browse history-->

    <!--modify password-->
    <string name="no_idea">设置微信密码后可以通过账号/手机号+密码短信登录</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="repeat_new_password">重复新密码</string>
    <string name="password_request">密码必须不少于8个字符，而且同时包含字母和数字</string>
    <string name="forget_password">忘记密码？</string>
    <string name="no_data_found">未找到数据</string>

</resources>
