<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ModifyPasswordActivity">

    <com.zzued.campustravel.view.CustomTitleBar
        android:id="@+id/title_modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:right_text_color_title_bar="@drawable/selector_home_right_text_white_accent"
        app:right_text_title_bar="@string/finish"
        app:img_btn_src_title_bar="@drawable/selector_view_title_back_white_gray"
        app:text_color_title_bar="@android:color/white"
        app:title_title_bar="@string/modify_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/middle_margin"
        android:text="@string/no_idea" />

    <EditText
        android:id="@+id/et_modify_password_account"
        style="@style/ModifyPasswordETStyle"
        android:hint="@string/account"
        android:inputType="text"
        tools:ignore="TextFields" />

    <View style="@style/SplitLineViewStyle" />

    <EditText
        android:id="@+id/et_modify_password_old_passowrd"
        style="@style/ModifyPasswordETStyle"
        android:hint="@string/old_password"
        android:inputType="textPassword" />

    <View style="@style/SplitLineViewStyle" />

    <EditText
        android:id="@+id/et_modify_password_new_password"
        style="@style/ModifyPasswordETStyle"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <View style="@style/SplitLineViewStyle" />

    <EditText
        android:id="@+id/et_modify_password_repeat"
        style="@style/ModifyPasswordETStyle"
        android:inputType="textPassword"
        android:hint="@string/repeat_new_password"/>

    <TextView
        android:layout_marginTop="@dimen/home_page_margin_small"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginEnd="@dimen/middle_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/common_text_size_middle"
        android:text="@string/password_request"/>

    <TextView
        android:id="@+id/tv_modify_password_forget"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_margin"
        android:text="@string/forget_password"
        android:textSize="@dimen/common_text_size_large"
        android:textColor="@android:color/holo_blue_dark"/>

</LinearLayout>