<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <com.zzued.campustravel.view.CustomTitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:img_btn_src_title_bar="@drawable/selector_view_title_back_white_gray"
        app:text_color_title_bar="@android:color/white"
        app:title_title_bar="@string/setting" />

    <TextView
        android:id="@+id/tv_setting_modify_profile"
        style="@style/SettingItemStyle"
        android:text="@string/modify_profile" />

    <View style="@style/SplitLineViewStyle" />

    <TextView
        android:id="@+id/tv_setting_change_password"
        style="@style/SettingItemStyle"
        android:text="@string/modify_password" />

    <View style="@style/SplitLineViewStyle" />

    <TextView
        android:id="@+id/tv_setting_notify"
        style="@style/SettingItemStyle"
        android:text="@string/message_notify" />

    <View style="@style/SplitLineViewStyle" />

    <TextView
        android:id="@+id/tv_setting_help_feedback"
        style="@style/SettingItemStyle"
        android:text="@string/help_and_feedback" />

    <View style="@style/SplitLineViewStyle" />

    <TextView
        android:id="@+id/tv_setting_about"
        style="@style/SettingItemStyle"
        android:text="@string/about" />

    <View style="@style/SplitLineViewStyle" />

    <Button
        android:id="@+id/btn_setting_exit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/home_page_margin_middle"
        android:background="@drawable/ripple_start_button"
        android:minWidth="260dp"
        android:text="@string/exit_login_button"
        android:textColor="@android:color/white" />
</LinearLayout>