<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">
    <com.zzued.campustravel.view.CustomTitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:img_btn_src_title_bar="@drawable/selector_view_back_gray_white"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/middle_margin"
                android:layout_marginStart="@dimen/middle_margin"
                android:textSize="26sp"
                android:textColor="@android:color/black"
                android:text="@string/register"/>
            <EditText
                android:id="@+id/et_reg_account"
                style="@style/LoginEditTextStyle"
                android:layout_marginTop="25dp"
                android:inputType="text"
                android:hint="@string/account_must"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_reg_phone"
                    style="@style/LoginEditTextStyle"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:inputType="phone"
                    android:hint="@string/phone_num_must"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/get_certify_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/ripple_login_button"
                    android:text="@string/getcertifycode"
                    android:layout_marginRight="@dimen/common_text_size_large"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/middle_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:background="@drawable/layer_list_reg_bottom_gray"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/gender"/>
                <RadioGroup
                    android:id="@+id/rg_reg_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="125dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_btn_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>
                    <RadioButton
                        android:id="@+id/radio_btn_female"
                        android:layout_marginStart="25dp"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:background="@drawable/layer_list_reg_bottom_gray"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/birthday"/>
                <TextView
                    android:id="@+id/tv_reg_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="105dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            </LinearLayout>
            <EditText
                android:id="@+id/et_reg_password"
                style="@style/LoginEditTextStyle"
                android:layout_marginTop="@dimen/middle_margin"
                android:inputType="textPassword"
                android:hint="@string/password"/>
            <EditText
                android:id="@+id/et_reg_password_confirm"
                style="@style/LoginEditTextStyle"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/middle_margin"
                android:hint="@string/confirm_password"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
        android:id="@+id/btn_reg_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginEnd="@dimen/middle_margin"
        android:background="@drawable/ripple_login_button"
        android:textColor="@android:color/white"
        android:text="@string/register"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obey_protocol"/>
        <TextView
            android:id="@+id/tv_reg_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/articles_of_agreement"/>
    </LinearLayout>
</LinearLayout>