<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">
    <com.zzued.campustravel.view.CustomTitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:img_btn_src_title_bar="@drawable/selector_view_back_gray_white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/middle_margin"
        android:layout_marginStart="@dimen/middle_margin"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        android:text="@string/login"/>
    <EditText
        android:id="@+id/et_login_account"
        style="@style/LoginEditTextStyle"
        android:inputType="text"
        android:layout_marginTop="25dp"
        android:hint="@string/account_phone_num"
        />
    <EditText
        android:id="@+id/et_login_password"
        style="@style/LoginEditTextStyle"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/middle_margin"
        android:hint="@string/password"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/middle_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_size_middle"
            android:text="@string/rememberpassword"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginEnd="@dimen/middle_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/ripple_login_button"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/finish"/>
</LinearLayout>