<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.VoiceIntroActivity">
    <com.zzued.campustravel.view.CustomTitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:img_btn_src_title_bar="@drawable/selector_view_back_gray_white"/>
    <TextView
        android:id="@+id/tv_voice_inter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/home_page_title_size_large"
        android:layout_marginTop="@dimen/middle_margin"
        android:singleLine="true"
        android:ellipsize="end"
        android:textColor="@android:color/black"
        android:text="@string/voice_introducing_now"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:gravity="center"
        android:textSize="@dimen/common_text_size_middle"
        android:text="@string/voice_introduce_hint"/>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/iv_voice_inter_speaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/anim_list_voice_inter_speaker"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_voice_inter_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="260dp"
        android:layout_marginBottom="@dimen/middle_margin"
        android:background="@drawable/ripple_start_button"
        android:textColor="@android:color/white"
        android:text="@string/stop_introducing"/>
</LinearLayout>