<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    tools:context=".activities.LogRegActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="165dp"
        android:text="@string/app_name_zhCN"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:textSize="28sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:background="@drawable/orange_tran_pressed_darker"
        android:textColor="@android:color/white"
        android:text="@string/login"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/orange_tran_pressed_darker"
        android:textColor="@android:color/white"
        android:text="@string/register"
        />
</LinearLayout>